--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-usage: NegaChess.py <Negachess_database>
+USAGE: NegaChess.py <Negachess_database>
 
             NegaChess: A Pygame Chess Engine/GUI.   
 Copyright (C) 2015 Deepesh Nagarajan (1337deepesh@gmail.com)
@@ -13,4 +13,4 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 See the GNU General Public License <http://www.gnu.org/licenses/>
 for more details.
 
-Pre-requisites: install pygame: sudo apt-get install python-pygame
+DEPENDENCIES: install pygame: sudo apt-get install python-pygame
